--- a/src/AlunoAPI/AlunoAPI.Service/AlunoAPI.Service.csproj
+++ b/src/AlunoAPI/AlunoAPI.Service/AlunoAPI.Service.csproj
@@ -8,9 +8,10 @@
     <PackageReference Include="AutoMapper" Version="11.0.0" />
 	  <PackageReference Include="FTTBlazor.Common" Version="1.0.2" />
   </ItemGroup>
-
+  
   <ItemGroup>
-    <ProjectReference Include="..\PokeAPI.Data\PokeAPI.Data.csproj" />
+    <ProjectReference Include="..\..\FTTBlazor.Client.Common\FTTBlazor.Client.Common.csproj" />
+    <ProjectReference Include="..\AlunoAPI.Data\AlunoAPI.Data.csproj" />
   </ItemGroup>
 
 </Project>
